[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RLT"
version = "0.1.0"
dependencies = [
    "matplotlib==3.10.7",
    "numpy==2.3.5",
    "pandas==2.3.3",
    "scikit-learn==1.7.2",
    "seaborn==0.13.2",
    "ipykernel"
]

[tool.setuptools.packages.find]
where = ["."]  # Looks in the root directory
include = ["src*"]  # Specifically includes the 'src' folder